--- a/ci_cd/production_server/Dockerfile
+++ b/ci_cd/production_server/Dockerfile
@@ -2,5 +2,5 @@ FROM python:3.9-buster
 ADD requirements.txt /app/requirements.txt
 WORKDIR /app/
 RUN pip install -r requirements.txt
-ENTRYPOINT ["python"]
-CMD ["./app.py","--host=0.0.0.0"]
+COPY . .
+CMD ["python3", "./app.py", "--host=0.0.0.0"]
