--- a/aws-client/single_node_with_docker_ansible_client/configuration.yml
+++ b/aws-client/single_node_with_docker_ansible_client/configuration.yml
@@ -9,7 +9,6 @@
      with_items: "{{groups['all']}}"
      become: true
 
-
    - name: apt update
      apt: update_cache=yes upgrade=dist
      become: true
@@ -29,7 +28,7 @@
       owner: appuser
       group: appuser
 
-- hosts: prodserver
+- hosts: production
   vars_files:
    - setup_var.yml  
   
@@ -78,11 +77,8 @@
         {
           "mtu": 1450
         }
-
-
-
-
-   - name: Install Docker  
+   
+   - name: Install Docker
      apt: pkg=docker-ce state=present update_cache=true allow_unauthenticated=yes
      become: true
 
@@ -91,13 +87,7 @@
      get_url:        
       url: "https://github.com/docker/compose/releases/download/1.24.0/docker-compose-{{ansible_system}}-{{ansible_architecture}}"
       dest: /usr/local/bin/docker-compose
-      mode: +x  
-
-   - name: Building containers
-     become: true
-     shell: docker build .
-     args: 
-      chdir: /model_serving/ci_cd/production_server
+      mode: +x
 
    - name: Running containers
      become: true
@@ -105,7 +95,7 @@
      args: 
       chdir: /model_serving/ci_cd/production_server 
 
-- hosts: devserver
+- hosts: development
   vars_files:
    - setup_var.yml
 
